--- a/magruka.1
+++ b/magruka.1
@@ -1,5 +1,5 @@
-.TH MAGRUKA 6 2017-11-17
+.TH MAGRUKA 6 2019-03-15
 .SH NAME
 magruka \- a game based on Richard Bartle's Waving Hands
 .SH AUTHOR
-KeyboardFire <andy@keyboardfire.com>
+Andy Tockman <andy@tck.mn>
